--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "dependencies": {
+    "@plasius/schema": "^1.1.1"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
